# sompcoc

./: .env.example  .gitignore  Cargo.toml  README.md
src/: commands.rs  items.rs  leaderboard.rs  main.rs  player.rs
src/commands/: about.rs  balance.rs  leaderboard.rs  shill.rs  shop.rs
